--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -117,7 +117,9 @@
 	display: flex;
 	align-items: center;
 	>* {
-		font-weight: 700;
+		font-weight: 500;
+		font-family: $font-1;
+
 		font-size: 16px;
 		line-height: 120%;
 		letter-spacing: 0.2px;
