--- a/src/sass/pages/home/_choise.scss
+++ b/src/sass/pages/home/_choise.scss
@@ -418,7 +418,7 @@
 }
 
 .choise-box__name {
-	font-weight: 700;
+	font-weight: 500;
 	font-size: 16px;
 	line-height: 130%;
 	margin-bottom: 20px;
@@ -452,6 +452,10 @@
 			transition: transform 0.3s 1.1s ease-in-out;
 			// transform: translateX(-100px);
 			// margin-left: -55px;
+		}
+		&:hover {
+			color: rgba(#fff, 1);
+			transition: padding 0.3s 1.1s ease-in-out, transform 0.1s ease-in-out, color 0.3s ease-in-out;
 		}
 		&.active {
 			color: rgba(#fff, 1);
