--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -6,6 +6,11 @@ pageName: homePage
 
 {% extends 'layouts/_page-default.twig' %}
 {% block content %}
+	<div class="preloader">
+		<span class="preloader__value"><span data-value>99</span><span>%</span></span>
+		<span class="preloader__line"></span>
+		<svg enable-background="new 0 0 32 32" id="Layer_4" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><polygon fill="none" points="29,6 16,26 3,6" stroke="#404040" stroke-linejoin="arcs" stroke-miterlimit="0" stroke-width="2"/></svg>
+	</div>
 	<main>
 		{% include 'pages/home/_hero.twig' %}
 		{% include 'pages/home/_card.twig' %}
